--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Build outputs
+dist/
+dist-ssr/
+build/
+.next/
+out/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.local
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +27,63 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Testing
+coverage/
+.nyc_output/
+
+# TypeScript
+*.tsbuildinfo
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+!.vscode/settings.json
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# OS files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.swp
+*.swo
+*.swn
+*.bak
+*.tmp
+*~
+
+# Database
+*.sqlite
+*.sqlite3
+*.db
+
+# Secrets (never commit these!)
+credentials.json
+secrets.json
+*.pem
+*.key
+
+# Misc
+.cache/
+.temp/
+.turbo/
+
+# PWA generated files (regenerated on build)
+dev-dist/
+
+# Project-specific (internal docs)
+CLAUDE.md
+goldenrules.md
