--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  lint-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,10 +28,13 @@ jobs:
         working-directory: frontend
         run: npm run lint
 
-      - name: Build
+      - name: Build (verify)
         working-directory: frontend
         run: npm run build
 
       - name: Test
         working-directory: frontend
         run: npm run test
+
+# NOTE: Deployment sker manuellt till egen server (benbodev.se)
+# Kör: ./scripts/deploy-frontend.sh
